alignment issue fixed

--- a/src/todo.css
+++ b/src/todo.css
@@ -5,6 +5,7 @@
   width: calc(33% - 25px);
   text-align: center;
   height: 80vh;
+  vertical-align: top;
 }
 .card:first-child {
   margin-left: 20px;
